Add new UI section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <p>This is a simple HTML page to demonstrate Git version control.</p>
     <p>Feel free to explore and make changes!</p>
     <p>Have a great day!</p>
+
+    // This will be in new branch
+    <h1>Welcome to GitLearnings</h1>
+    <p>This branch is new</p>
     
 </body>
 </html>
